Prevent path from overlapping text

--- a/pathpuzzles.styl
+++ b/pathpuzzles.styl
@@ -27,10 +27,12 @@ svg
   rect.background
     fill: white
     stroke: none
-  g line
+  line
     stroke-width: minorWidth
     stroke: black
     stroke-linecap: square
+  .puzzle rect
+    fill: white
   text
     font-family: Myriad Pro, sans-serif
     font-size: fontSize
